[IMP] <pro>ColorPicker: Optimize an issue where the preset attribute selector position could not be adaptive. & [FIX] <pro>TextArea: Fix line break style issues. & [IMP] Collapse: Support click icon extension support.

--- a/components-pro/table/style/index.less
+++ b/components-pro/table/style/index.less
@@ -584,6 +584,10 @@
     pointer-events: none;
   }
 
+  &-sticky-shadow-no-transition {
+    transition: none;
+  }
+
   &-sticky-shadow {
     z-index: 2;
     border-color: transparent;
